Updated form input font size to avoid zoom on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ main {
   border-radius: 5px;
   border: 1px solid #D5D4D8;
   text-indent: 5px;
+  font-size: 16px;
 }
 
 .form-button {
